[package]
name = "chesspace"
version = "0.1.0"
authors = ["Richard Poettler <richard.poettler@gmail.com>"]
edition = "2018"

[target.x86_64-pc-windows-gnu]
# compile with `cargo build --release --target "x86_64-pc-windows-gnu"`
linker = "/usr/bin/x86_64-w64-mingw32-gcc"
ar = "/usr/x86_64-w64-mingw32/bin/ar"

[dependencies]
structopt = "0.3.22"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
